--- a/index.html
+++ b/index.html
@@ -370,13 +370,18 @@
             </div>
             <div class="form-field">
                 <textarea id="message" class="js-input fs-200 fw-200" type="text" rows="4" required></textarea>
-                <label class="label fs-200 fw-200" for="message">Opiši mi svoju ideju</label>
+                <label class="label fs-200 fw-200" for="message">Opiši mi svoju ideju</label>   
                 <div class="input-underline"></div>
             </div>
             <div class="form-field flex">
                 <input class="submit-btn" type="submit" value="Pošalji">
             </div>
+            
+            <p class="text-center" style="font-size: 0.75rem;">
+                Ova stranica je zaštićena reCAPTCHA-om te se primjenjuju <a href="https://policies.google.com/privacy" target="_blank">Pravila privatnosti</a> i <a href="https://policies.google.com/terms" target="_blank">Uvjeti korištenja</a>.
+            </p>
         </form>
+
     </section>
 
     <footer id="footer" class="">
@@ -410,7 +415,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.42/dist/lenis.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollToPlugin.min.js"></script>
     <script src="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.js"></script>
-    <script src="https://unpkg.com/split-type"></script>
+    <script src="https://unpkg.com/split-type"></script> 
+    <script src="https://www.google.com/recaptcha/api.js?render=6LeB6JEqAAAAAPCZqL8d_wd9TZObY4jyZ7bNZLAl"></script>
 
 </body>
 
