--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <meta name="description"
         content="Iskusni fotograf i web developer iz Nove Gradiške, specijaliziran za stvaranje vizualno impresivnih projekata. Obratite se za suradnju!">
     <script src="index.js" defer></script>
+    <link rel="canonical" href="https://www.tomislavkovacevic.com">
+    <link rel="shortlink" href="https://www.tomislavkovacevic.com">
 </head>
 
 <body>
