--- a/gallery/nightlife.html
+++ b/gallery/nightlife.html
@@ -38,12 +38,12 @@
                 aria-expanded="false"><span class="sr-only">Menu</span></button>
         </div>
         <nav>
-            <ul id="main-navigation" data-visible="false" class="main-navigation flex ff-outfit">
-                <li aria-selected="false"><a href="/#intro" class="fs-100 text-white">Početna</a></li>
-                <li aria-selected="false"><a href="/#about-me" class="fs-100 text-white">O meni</a></li>
-                <li aria-selected="false"><a href="/#gallery" class="fs-100 text-white">Galerija</a></li>
-                <li aria-selected="false"><a href="/#web-solutions" class="fs-100 text-white">Web rješenja</a></li>
-                <li aria-selected="false"><a href="/#contact" class="contact-nav fs-100 text-dark">Kontaktiraj me</a>
+            <ul id="main-navigation" data-visible="false" class="main-navigation flex ff-outfit" role="tablist">
+                <li role="tab" aria-selected="false" tabindex="0" ><a href="/#intro" class="fs-100 text-white">Početna</a></li>
+                <li role="tab" aria-selected="false" tabindex="-1"><a href="/#about-me" class="fs-100 text-white">O meni</a></li>
+                <li role="tab" aria-selected="false" tabindex="-1"><a href="/#gallery" class="fs-100 text-white">Galerija</a></li>
+                <li role="tab" aria-selected="false" tabindex="-1"><a href="/#web-solutions" class="fs-100 text-white">Web rješenja</a></li>
+                <li role="tab" aria-selected="false" tabindex="-1"><a href="/#contact" class="contact-nav fs-100 text-dark">Kontaktiraj me</a>
                 </li>
             </ul>
         </nav>
